News Event Single Activity Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,6 +109,9 @@
     <string name="tv_subcategory_single_product_discription">Product Description</string>
 
 
+    <string name="tv_collepsing">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
+    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. </string>
+
 
     <!-- quantity picker on add to cart -->
     <!-- Font -->
