--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="toolbar_image">Logo Image</string>
     <string name="drawer_image_home">Home Image</string>
     <string name="dr_tv_home">Home</string>
-    <string name="dr_tv_delivery">Delivery</string>
+    <string name="dr_tv_delivery">Delivery Address</string>
     <string name="toolbar_tv_payment_check">Payment</string>
     <string name="dr_tv_place_seller">Place Seller</string>
     <string name="dr_tv_inventry">Inventory</string>
@@ -84,6 +84,7 @@
     <string name="tv_toolbar_news_event">News/Events</string>
     <string name="tv_toolbar_subcategory_name">SubCategory Name</string>
     <string name="tv_toolbar_my_cart">My Cart</string>
+    <string name="tv_toolbar_address">My Address</string>
     <string name="tv_toolbar_subcategory_product">SubCategory Product</string>
     <string name="tv_subcategory_product_list_tittle">Product Name</string>
     <string name="tv_news_event_tittle">News/Event Name</string>
@@ -101,6 +102,8 @@
     <string name="tv_my_cart_checkout_bracket_open">(</string>
     <string name="tv_my_cart_checkout_bracket_closed">)</string>
     <string name="tv_subcategory_single_product_add_cart">ADD TO CART</string>
+    <string name="tv_my_address_confirm">CONFIRM</string>
+    <string name="tv_my_address_edit_address">Edit Address</string>
     <string name="tv_subcategory_single_product_quantity_number">00</string>
     <string name="tv_subcategory_product_price">00$</string>
     <string name="tv_my_cart_delivery_charges">00$</string>
@@ -108,6 +111,23 @@
     <string name="tv_my_cart_total_items_price">$ 00</string>
     <string name="tv_patment_check_item_name">Item Name</string>
     <string name="tv_subcategory_single_product_discription">Product Description</string>
+    <string name="tv_my_address_user_f_name_text">First Name :</string>
+    <string name="tv_my_address_user_l_name_text">Last Name :</string>
+    <string name="tv_my_address_user_address_text">Address :</string>
+    <string name="tv_my_address_user_country_text">Country :</string>
+    <string name="tv_my_address_user_state_text">State :</string>
+    <string name="tv_my_address_user_city_text">City :</string>
+    <string name="tv_my_address_user_zip_text">Zip Code :</string>
+    <string name="tv_my_address_user_phone_text">Phone No. :</string>
+    <string name="tv_my_address_user_f_name">First Name</string>
+    <string name="tv_my_address_user_l_name">Last Name</string>
+    <string name="tv_my_address_user_address">Street Address</string>
+    <string name="tv_my_address_user_country">Country</string>
+    <string name="tv_my_address_user_state">State</string>
+    <string name="tv_my_address_user_city">City</string>
+    <string name="tv_my_address_user_zip">Zip Code</string>
+    <string name="tv_my_address_user_phone_no">Phone Number</string>
+    <string name="tv_my_address_text">Check Your Address</string>
     <string name="user_first_name">User First Name</string>
     <string name="user_last_name">User Last Name</string>
     <string name="user_street_address">User Street Address</string>
