Contact Support Screen Added, during Signup time user can select User type and acconding to that menu can publicate option is visible for only Seller type user else hide

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,13 +17,22 @@
     <string name="tv_publicate_new_text">Publish your product</string>
     <string name="tv_category_text">Category</string>
     <string name="tv_product_name_text">Product Name</string>
+    <string name="tv_contact_support_name_text">User Name</string>
+    <string name="tv_contact_support_email_text">User Email</string>
+    <string name="tv_contact_support_phone_text">User Phone NO.</string>
     <string name="tv_product_price_text">Product Price</string>
     <string name="tv_product_description_text">Product Description</string>
+    <string name="tv_contact_support_query_text">Your Query</string>
     <string name="tv_product_image_path">image path</string>
     <string name="tv_product_image_text">Product Image</string>
     <string name="edt_product_name_hint">Only letters and numbers allowed</string>
+    <string name="edt_contact_support_name_hint_text">Enter Your Name</string>
+    <string name="edt_contact_support_email_hint_text">Enter Your Email</string>
+    <string name="edt_contact_support_phone_hint_text">Enter Your Phone Number</string>
     <string name="edt_product_price_hint">Product Price</string>
+    <string name="edt_contact_support_query_hint">What can we help with?</string>
     <string name="edt_product_name_allowed_text">0123456789abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
+    <string name="edt_contact_support_allowed_number">+0123456789</string>
     <string name="tv_sbucategory_text">Subcategory</string>
     <string name="tv_order_no_text">Order No. :</string>
     <string name="tv_order_date_text">Order Date :</string>
@@ -107,6 +116,7 @@
     <string name="tv_toolbar_order_detail_number">Order Number</string>
     <string name="tv_toolbar_address">My Address</string>
     <string name="tv_toolbar_publicate_new">Publicate New</string>
+    <string name="tv_toolbar_contact_support">Contact Support</string>
     <string name="tv_toolbar_subcategory_product">SubCategory Product</string>
     <string name="tv_subcategory_product_list_tittle">Product Name</string>
     <string name="tv_news_event_tittle">News/Event Name</string>
@@ -122,6 +132,7 @@
     <string name="tv_my_cart_checkout">TOTAL</string>
     <string name="tv_my_cart_checkout_text">Checkout</string>
     <string name="tv_btn_publicate_text">Publicate Now</string>
+    <string name="tv_btn_contact_support_text">Send</string>
     <string name="tv_my_cart_checkout_bracket_open">(</string>
     <string name="tv_my_cart_checkout_bracket_closed">)</string>
     <string name="tv_subcategory_single_product_add_cart">ADD TO CART</string>
